--- a/index.html
+++ b/index.html
@@ -10,19 +10,39 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <header>
+    <header class="banner-container">
         <nav>
-            <div class="banner-container">
-                <div class="banner-title">
-                    <h1>All Thinks Are Possible If You believe</h1>
-                    <p class="banner-decription">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+            <div>
+                <div class="banner-section">
+                    <h1 class="banner-title">All Thinks Are Possible If You believe</h1>
+                    <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
                     <button class="banner-button">Contact Us</button>
                 </div>
+                
             </div>
         </nav>
     </header>
-    <main>
+    <main class="section-container">
+        <section class="detail-section">
+            <div>
+                <h2 class="section-of-title">My failures of previous year</h2>
+                <p class="section-of-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                <ul class="section-of-list">
+                    <li>Contrary to popular belief, is not simply.</li>
+                    <li>Contrary to popular belief.</li>
+                    <li>Contrary to popular , is not simply.</li>
+                    <li>Contrary to popular belief, is not simply.</li>
+                    <li>Contrary to popular simply.</li>
+                </ul>
+            </div>
+        </section>
+        <img class="section-of-image" src="images/person.png" alt="Person">
+        <section class="plans-section">
 
+        </section>
+        <section class="call-section">
+
+        </section>
     </main>
     <footer>
 
